--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="middle-container">
      <div class="profile">
-    <img class="profile-pic" src="images/profile-pic.PNG" alt="profile-pic">
+    <img class="profile-pic" src="images/profile-pic.png" alt="profile-pic">
     <h2>Hi.</h2>
     <p class="intro">I'm a web designer / devloper based in Akola, Maharashtra. I have passion for web design and love to create for web & mobile devices.</p>
      </div>
