--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <div class="skills">
     <h2>What can I do?</h2>
     <div class="skill-row">
-      <img class="skill-1" src="https://img-premium.flaticon.com/png/128/4661/premium/4661409.png?token=exp=1631014236~hmac=a31ba151fa5f5a188b6904b6966e2f3a" alt="skill-1">
+      <img class="skill-1" src="images/skill-1.png" alt="skill-1">
       <h3>Design what you want.</h3>
       <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
     </div>
     <div class="skill-row">
-      <img class="skill-2" src="https://img-premium.flaticon.com/png/128/3242/premium/3242257.png?token=exp=1631013950~hmac=f11c475880bea83ad015c82c47d58979" alt="skill-2">
+      <img class="skill-2" src="images/skill-2.png" alt="skill-2">
       <h3>Devlop what you need.</h3>
       <p>I'm a devloper, so I know how to create your website to run accross devices using the latest technologies availaible.</p>
     </div>
