--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/yash-sharma-2319541b6">LinkedIn</a>
   <a class="footer-link" href="https://github.com/Yash0Sharma">Github</a>
-  <a class="footer-link" href="https://instagram.com/yashjsharma16">Instagram</a>
+  <a class="footer-link" href="https://instagram.com/yashjsharma_">Instagram</a>
   <p class="copyright">© 2021 Yash Sharma.</p>
 </div>
 
